GNOME Bugzilla – Bug 782027
"Left-Handed Orientation" switch in Wacom panel does not work
Last modified: 2017-07-03 12:42:58 UTC
After upgrading my Arch Linux system from GNOME 3.22 to GNOME 3.24, I've noticed that the "Left-Handed Orientation" switch in the Wacom panel of the GNOME Control Center no longer works. Regardless of if the switch is 'on' or 'off', the tablet continues to behave in a right-handed orientation. I am using an Xorg session, not a Wayland session. Using `dconf-editor`, I can see that key in dconf (under `/org/gnome/desktop/peripherals/tablets/$VID:$PID/left-handed`) is properly updated. When using `xinput watch-props`, however, I do not see any changes to the "Wacom Rotation" property on any of the X11 tablet devices. System Info -------------- Arch Linux gnome-control-center 3.24.1-1 gnome-settings-daemon 3.24.1+7+g42f75ed4-1 mutter 3.24.1+1+geb394f19d-1 xf86-input-wacom 0.34.2-1 xorg-server 1.19.3-2
Confirmed for Ubuntu 17.04 with GNOME 3.24: gnome-control-center 1:3.24.1-0ubuntu1 gnome-settings-daemon 3.24.1-0ubuntu1 gnome-shell 3.24.1-0ubuntu1 xserver-xorg-input-wacom 1:0.34.0-0ubuntu2 libwacom-bin 0.22-1 The workaround I found is: xsetwacom set `xsetwacom list|grep -i touch|awk -F 'id: ' '{print $2}'|awk '{print $1}'` rotate half
"Studies suggest that approximately 10% of the world population is left-handed." – https://en.wikipedia.org/wiki/Handedness
Created attachment 353913 [details] [review] backends/x11: Handle left-handed mode on pen/eraser devices correctly Due to the pen/eraser device separation in X11, CLUTTER_TABLET_DEVICE does not apply there, this device type is only used in native/evdev. Checking for CLUTTER_PEN/ERASER_DEVICE makes the left-handed mode correctly applied on tablets.
Confirmed that this seems to do the trick, though I notice that the pen reverts back to right-handed mode after a logout/login. Oddly, as soon as I open the Wacom panel in g-c-c the left-handed setting takes effect.
Comment on attachment 353913 [details] [review] backends/x11: Handle left-handed mode on pen/eraser devices correctly Pushed the fix to master and gnome-3-24. I will leave the bug open to investigate the issue on login. Attachment 353913 [details] pushed as d23275b - backends/x11: Handle left-handed mode on pen/eraser devices correctly
Created attachment 354749 [details] [review] backends: Apply tablet settings on all tablet device types during startup This skipped the device types that are in use on X11.
Does the trick and looks good to me :)
Fixed in master and gnome-3-24. Attachment 354749 [details] pushed as ce98997 - backends: Apply tablet settings on all tablet device types during startup